--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 </head>
 <body>
     <h1>banana talk</h1>
+
     <textarea id="input-txt" placeholder="Enter your text to convert to minion language"></textarea>
+
     <button id="btn-translate">Translate</button>
-    <h3>Here's the translation</h3>
+
     <textarea id="output-txt" placeholder="Translation will appear here"></textarea>
+    <footer class="footer">
+        <div class="container">
+            <h2>About</h2>
+        </div>
+    </footer>
+    <script src="app.js" type="text/javascript"></script>
 </body>
 </html> 
